*  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
*  http://www.h-hennes.fr/blog/
*/

2016-05-19 : Version initiale
2016-06- : New commands
2016-09-17 - V 0.2.0 : New phar archive
2016-09-22 - V 0.2.1 : Replace configuration file in yml by file in php to optimize phar generation
2016-09-23 - V 0.2.2 : Cache management improvements, add media cache
2016-10-07 - V 0.2.3 : Fix media command
2016-10-10 - V 0.3.0 : New functionnaly : install prestashop from command line
2016-11-03 - V 0.4.0 : New command to get all configurations
2016-12-23 - V 0.5.0 : New commands to create admin user and to change admin password
2016-01-11 - V 0.5.1 : Improvment for creating admin user
2016-01-12 - V 0.6.0 : New command to add index.php files in directories
2016-03-27 - V 0.7.0 : New command for mass configuration object changes
2017-05-06 - V 0.7.1 : Now works with prestashop 1.7
2017-06-06 - V 0.7.2 : New Command to download Class Names for autocomplete
2017-06-21 - V 0.8.0 : Refactor modules commands to deals with multiples modules
2017-08-01 - V 0.9.0 : New commands to deals with hooks
2017-08-09 - V 1.0.0-beta1 : New auto-upgrade process
2017-08-10 - V 1.0.0 : Auto Upgrade works correctly + add build file
2017-12-29 - V 1.1.0 : New commands to deals with cron tasks ( with native module cronjobs )
2018-01-23 - V 1.2.0 : New commands to clean existing datas ( with native module pscleaner )
2018-05-04 - V 1.2.1 : New command to clear all caches ( PS > 1.7 Only )
2018-11-03 - V 1.2.2 : New commands and some fixes
2018-11-12 - V 1.2.3 : New command to anonymise customer datas
2018-12-03 - V 1.2.4 : Fix wrong exception message in Module/InstallCommand
2019-01-12 - V 1.2.4 : Fix wrong exception message in Module Commands
2019-02-11 - V 1.3.0 : Automatically detect commands
2019-03-11 - V 1.4.0 : New commands to generate module files ( declaration, controllers , upgrade )
2019-04-16 - V 1.4.1 : Module generation improvments