@@ -51,3 +51,4 @@
 2019-02-11 - V 1.3.0 : Automatically detect commands
 2019-03-11 - V 1.4.0 : New commands to generate module files ( declaration, controllers , upgrade )
 2019-04-16 - V 1.4.1 : Module generation improvments
+2019-05-10 - V 1.4.2 : Module generation improvments ( objectmodel )
